[package]
name = "custom_deserialize"
version = "0.1.0"
authors = ["Anton Sapunov <fort.sav.28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"
config = "0.11"
anyhow = "1"
regex = "1"
itertools = "0.10"
